vlib/v/checker/tests/enum_field_value_duplicate_f.vv
const x = $if duplicate_enum_value_check ? { 1 } $else { 2 }
const y = $if duplicate_enum_value_check ? { 3 } $else { 2 }

enum Foo {
	foo = x
	bar = y
}
